Fix overflow on mobile screen

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ html, body, #root {
   display: flex;
   flex-direction: column;
   flex: 1;
+  height: 100%;
 }
 @media screen and (min-width: 700px) {
   .chat {
